adding dependency for native build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
-quarkusPluginId=io.quarkus
+#Fri Jan 05 16:28:39 BRT 2024
 quarkusPluginVersion=3.6.4
-quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformVersion=3.6.4
