--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,8 @@ quarkusPluginVersion=3.6.4
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.6.4
+
+quarkus.mongodb.connection-string = mongodb://localhost:27017/
+quarkus.mongodb.database=oda-client
+quarkus.mongodb.uuid-representation=standard
+
