--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,6 @@ quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.6.4
 
 quarkus.mongodb.connection-string = mongodb://localhost:27017/
-quarkus.mongodb.database=oda-client
+quarkus.mongodb.database=oda-user
 quarkus.mongodb.uuid-representation=standard
 
