--- a/src/main/docker/Dockerfile.native
+++ b/src/main/docker/Dockerfile.native
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native -t quarkus/client-api .
+# docker build -f src/main/docker/Dockerfile.native -t quarkus/user-api .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/client-api
+# docker run -i --rm -p 8080:8080 quarkus/user-api
 #
 ###
 FROM registry.access.redhat.com/ubi8/ubi-minimal:8.9
